#PK-1647 Add addon product to order

--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -2182,7 +2182,7 @@
                                                         <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
                                                     }
                                                     <Span>
-                                                        @item.Item?.ItemName
+                                                        @item.Item?.ItemName @(item.IsAddOnProduct ? L["(AddOnProduct)"] : "")
                                                         <br />
                                                         @item.Spec
                                                     </Span>
