#PK-1642 Added Manual Bank Transfer in Group buys

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -799,6 +799,7 @@
                     @bind-Checked="@BankTransfer">
                         @L["EcPayVirtualBankTransfer"]
                     </Check>
+                    <Check TValue="bool" Disabled=@EditGroupBuyDto.IsEnterprise @bind-Checked="@ManualBankTransfer">@L["ManualBankTransfer"]</Check>
                     <Check TValue="bool"
                     Disabled=@EditGroupBuyDto.IsEnterprise
                     @bind-Checked="@IsLinePay">
