#PK-1633 Use Amount Received Excl Shipping for Profit Share

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyReport.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyReport.razor
@@ -110,7 +110,7 @@
                                     Caption="@L["ProfitShare%"]"
                                     TextAlignment="TextAlignment.Center">
                         <DisplayTemplate>
-                            @context.ProfitShare.ToString("N0")
+                            @context.ProfitShare.ToString("N0")%
                         </DisplayTemplate>
                     </DataGridColumn>
                     <DataGridColumn TItem="GroupBuyReportDto" Field="@nameof(GroupBuyReportDto.ProfitShareAmount)"
