#PK-1643 Updated EcPay Virtual Bank Transfer value in APIs

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -796,7 +796,7 @@
                     </div>
                     <Check TValue="bool"
                     Disabled=@EditGroupBuyDto.IsEnterprise
-                    @bind-Checked="@BankTransfer">
+                    @bind-Checked="@EcPayVirtualBankTransfer">
                         @L["EcPayVirtualBankTransfer"]
                     </Check>
                     <Check TValue="bool" Disabled=@EditGroupBuyDto.IsEnterprise @bind-Checked="@ManualBankTransfer">@L["ManualBankTransfer"]</Check>
