#PK-1631 Manual Bank Transfer implementation

--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -1922,6 +1922,10 @@
                 </CardBody>
 
             </Card>
+            @if (Order?.PaymentMethod == PaymentMethods.ManualBankTransfer)
+            {
+                <ManualBankTransferComponent OrderId="Order.Id" Order="Order" OnConfirm="OnPaymentConfirm" />
+            }
             <Card>
                 <CardBody>
                     <div class="row">
